added and fixed dockerfile

--- a/content/services/VOD-Service/index.html
+++ b/content/services/VOD-Service/index.html
@@ -3,6 +3,7 @@ title: VOD service
 title_long: Video on demand (VOD) <br /> <i class='ffs'>for</i> broadcasters
 highlight: Video on demand
 subtitle: VOD Services Description
+promo_image: ./pictogram_interactive_display_screen.svg
 description: >
     Video on demand
 intro: >
@@ -55,7 +56,7 @@ intro: >
     <ohs-cta>
         <p>Hello</p>
     </ohs-cta>
-        
+
 </div>
 <div class="wrapper">
 
@@ -67,7 +68,7 @@ intro: >
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
-    </div> 
+    </div>
 
     <div class="grid grid-align-middle grid-align-center mb">
         <div class="grid-item lg-3/5">
@@ -133,4 +134,3 @@ intro: >
 </div>
 
 <ohs-cta message="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod" link="/services/interactive-display-screen" linktext="Interactive Display Screens"></ohs-cta>
-
