--- a/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
+++ b/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
@@ -3,12 +3,12 @@ title: Audience research as a foundation for product design
 title_long: Audience research as a foundation for product design
 subtitle: Turning research into real-world design thinking
 promo_image: ./promo.png
-social_image: ./promo.png
+social_image: ./cheese.png
 date: 2015-04-01
 category: Research
 author: paolo
 description: >
-     
+
 
 twitter_handle: "@100shapes"
 ---
@@ -23,6 +23,8 @@ twitter_handle: "@100shapes"
             <p>Before embarking on any design for London Live, we conducted in-depth audience research in order to identify strategic opportunities for London Live within the online space. We interviewed 10 participants spanning London Live’s target demographic. We explored their daily travel, social, working life, their internet and technology usage, and their consumption of news, video and other media. This gave us the insights we needed to design a digital platform that would fit into their daily lives.</p>
 
             <p>Audience research is different from usability research in that it examines users’ behaviours and motivations rather than their usage of a particular product, although both are necessary for a user-centred design process. Audience research for UX is also different from market research - it is not concerned with market size, pricing or how to market a particular product idea. Instead it helps us identify the problems that users are trying to solve in their lives in order that we might use design to solve them in new better ways.</p>
+
+            <img src="/promo.png">
 
             <h2>‘Why?’ is the golden question</h2>
 
@@ -55,7 +57,7 @@ twitter_handle: "@100shapes"
 
             <h2>Audience-focused design</h2>
 
-            <p>London Live’s weather example is a simple one, but having a solid foundation of initial research enabled us to apply audience insights to every feature we designed; from catch-up TV and news to commenting and calls to action.</p>  
+            <p>London Live’s weather example is a simple one, but having a solid foundation of initial research enabled us to apply audience insights to every feature we designed; from catch-up TV and news to commenting and calls to action.</p>
 
             <p>If you already have a product and existing relationship with your audience, you may already have valuable insights that can be applied directly as design improvements. For London Live, formal audience research was vital as they were creating an entirely new platform. A solid appreciation of the audience’s behaviours - and crucially, their goals and motivations - is the best possible basis for successful product design.</p>
 
