--- a/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
+++ b/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
@@ -2,8 +2,8 @@
 title: Audience research as a foundation for product design
 title_long: Audience research as a foundation for product design
 subtitle: Turning research into real-world design thinking
-promo_image: ./promo.png
-social_image: ./cheese.png
+promo_image: promo.png
+social_image: cheese.png
 date: 2015-04-01
 category: Research
 author: paolo
