--- a/content/services/interactive-display-screen/index.html
+++ b/content/services/interactive-display-screen/index.html
@@ -2,7 +2,6 @@
 title: Interactive display screen
 title_long: Interactive display screen <br /> <i class='ffs'>for</i> the broadcast studio
 lead: Something really interesting
-promo_image: ./pictogram_interactive_display_screen.svg
 description: >
     Some really long description that breaks
     over multiple lines
@@ -11,6 +10,9 @@ intro: >
     Interactive video lets people click and interact with embedded
     video on your site to change and affect what's shown on screen.
     It's a great way to stand out with your video content.
+
+square_image_url: ./social.jpg
+banner_image_url: ./social.jpg
 ---
 
 
