fixed image hosting, replaced prefixoid

--- a/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
+++ b/content/blogs/audience-research-as-a-foundation-for-product-design/index.html
@@ -30,6 +30,8 @@ twitter_handle: "@100shapes"
 
             <p>Asking ‘why?’ is the key to gaining meaningful insights. It’s not easy or comfortable to ask or be asked. We don’t typically enjoy dissecting our own behaviour because it makes us question whether we’re normal. ‘Why?’ is inherently accusational - it reminds us of being at school. But, asking ‘why?’ is essential to understand the motivations that lie behind behaviour patterns, and there are ways to make it friendlier. Phrases like ‘How come you like...?’ or ‘What is it that makes you do...?’ are more reflective and less confrontational.</p>
 
+            <img src="/promo2.png">
+
             <p>Pinpointing the key insights Shared patterns of behaviour within the participant group indicate common goals. One of the topics we explored with participants in out London Live study was local weather information. We asked participants who were interested in local weather information not only what they used to check the weather, or ‘when?’ or ‘where?’, but ‘why?’.</p>
 
             <p>We discovered that weather was important to all of the target audience members we spoke to. Nothing unusual there, but what was relevant was that all had the same motivation for checking the weather; to to answer the question “Do I need a jacket or umbrella?”.</p>
