added limits and featured, closes #7 and closes #6

--- a/content/blogs/the-ux-gap/index.html
+++ b/content/blogs/the-ux-gap/index.html
@@ -5,7 +5,7 @@ subtitle: Thoughts on where user experience begins and ends
 promo_image: ./social.jpg
 date: 2014-06-30
 author: paolo
-promoted: true
+featured: true
 category: UX
 description: >
     Some really long description that breaks
@@ -61,7 +61,7 @@ twitter_handle: "@100shapes"
             <h2>User experience is everywhere</h2>
 
             <p>None of the factors listed above fall under the perceived ‘UX’ discipline, some of them are not even within the control of the business, but they are obviously part of the user experience. So, we have a discrepancy between what the UX team is expected to achieve (to define and manage user experience) and their actual remit (to define how users interact with the digital interface).</p>
-         
+
             <p>In order to achieve user experience greatness, every team needs to consider how their decisions affect the user’s experience of the product. Not just the obvious, direct implications for the current screen or process, but subtle effects elsewhere. What expectations does this set? And how is this experience affected by the user expectations set elsewhere?</p>
 
             <p>Going back to our fictional movie streaming service, let’s say for example that the product team want to introduce HD streaming. The technology team choose a new streaming supplier in order to offer HD. The user experience team re-design the interface to allow users to filter for HD movies. The marketing team run a campaign to tell customers about this new addition to the service, and how much it will improve their movie experience. Every team has done their best to meet their objectives. Great!</p>
