Correct metadata information for services

--- a/content/services/VOD-Service/index.html
+++ b/content/services/VOD-Service/index.html
@@ -3,7 +3,8 @@ title: VOD service
 title_long: Video on demand (VOD) <br /> <i class='ffs'>for</i> broadcasters
 highlight: Video on demand
 subtitle: VOD Services Description
-promo_image: ./pictogram_interactive_display_screen.svg
+square_image: ./social.jpg
+banner_image: ./banner.jpg
 description: >
     Video on demand
 intro: >
