--- a/content/services/interactive-display-screen/index.html
+++ b/content/services/interactive-display-screen/index.html
@@ -11,8 +11,8 @@ intro: >
     video on your site to change and affect what's shown on screen.
     It's a great way to stand out with your video content.
 
-square_image_url: ./social.jpg
-banner_image_url: ./social.jpg
+square_image: ./social.jpg
+banner_image: ./social.jpg
 ---
 
 
