--- a/content/services/VOD-Service/index.html
+++ b/content/services/VOD-Service/index.html
@@ -8,7 +8,9 @@ banner_image: ./banner.jpg
 description: >
     Video on demand
 intro: >
-    Interactive video lets people click and interact with embedded video on your site to change and affect what's shown on screen. It's a great way to stand out with your video content.
+    Interactive video lets people click and interact with
+    embedded video on your site to change and affect what's
+    shown on screen. It's a great way to stand out with your video content.
 ---
 
 
