Renamed the Strategic UX post

--- a/content/services/strategic-ux-consultantcy/index.html
+++ b/content/services/strategic-ux-consultantcy/index.html
@@ -1,5 +1,5 @@
 ---
-title: Strategic UX
+title: Strategic UX Consultantcy
 title_long: Strategic User Experience (UX) Consultantcy <br /> <i class='ffs'>for</i> broadcasters
 lead: Something really interesting
 description: >
