--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -1,13 +1,13 @@
 ---
-title: Strategic UX Consultantcy
-title_long: Strategic User Experience (UX) Consultantcy <br /> <i class='ffs'>for</i> broadcasters
+title: Strategic UX Consultancy
+title_long: Strategic User Experience (UX) Consultancy <br /> <i class='ffs'>for</i> broadcasters
 lead: Something really interesting
 description: >
     Some really long description that breaks
     over multiple lines
 
 intro: >
-    Stragegic UX Consultantcy intro.
+    Strategic UX Consultancy intro.
 
 square_image: ./social.jpg
 banner_image: ./banner.jpg
