fixed some typos

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -186,13 +186,13 @@ banner_image: interactive-display-screens.png
             <p>With more than 6 hours of daily live news and entertainments programming, interactive screens have transformed the way London Live’s presenters communicate with their audiences. 100 Shapes devised and designed a suite of interactive big screen applications for the London Live presenters to clearly communicate news, travel and weather content at a moment’s notice.</p>
         </div>
         <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-map">
+            <img src="london-live-map.png">
         </div>
         <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-boris">
+            <img src="london-live-boris.png">
         </div>
         <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-ftse">
+            <img src="london-live-ftse.png">
         </div>
 
         <div class="grid-item 1/1 lg-1/12">
