--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -3,8 +3,7 @@ title: Interactive Display Screens
 title_long: Interactive Display Screens for Broadcast
 lead: Showcase dynamic multimedia content and data, live.
 description: >
-    Some really long description that breaks
-    over multiple lines
+    Whether you’re broadcasting an in-depth news feature or today’s weather forecast, an interactive display screen is a powerful tool for presenters to communicate your message to audiences on television and online.
 intro: >
     Whether you’re broadcasting an in-depth news feature or today’s weather forecast, an interactive display screen is a powerful tool for presenters to communicate your message to audiences on television and online.
 
@@ -84,7 +83,7 @@ banner_image: interactive-display-screens.png
             <p>If you are looking for something different, we can create a custom format for your show. We also have a suite of templates for you to choose from. See the formats London Live asked us design.</p>
 
             <h3>Social media</h3>
-            <p>Display real-time social media, social analytics and audience participation from all the major networks, powered by our social media platform Climb.social.</p>
+            <p>Display real-time social media, social analytics and audience participation from all the major networks, powered by our social media platform <a href="http://climb.social"></a>Climb.social</p>.
         </div>
     </div>
     <div class="grid">
@@ -196,7 +195,7 @@ banner_image: interactive-display-screens.png
             <img src="london-live-ftse.png">
         </div>
     </div>
-    <div class="grid mb">
+    <div class="grid mb+">
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-2/3">
