added audience research

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -7,7 +7,7 @@ description: >
 intro: >
     Whether you’re broadcasting an in-depth news feature or today’s weather forecast, an interactive display screen is a powerful tool for presenters to communicate your message to audiences on television and online.
 
-square_image: interactive-display-screens.png
+square_image: interactive-display-screens-square.svg
 banner_image: interactive-display-screens.png
 ---
 
@@ -83,7 +83,7 @@ banner_image: interactive-display-screens.png
             <p>If you are looking for something different, we can create a custom format for your show. We also have a suite of templates for you to choose from. See the formats London Live asked us design.</p>
 
             <h3>Social media</h3>
-            <p>Display real-time social media, social analytics and audience participation from all the major networks, powered by our social media platform <a href="http://climb.social"></a>Climb.social</p>.
+            <p>Display real-time social media, social analytics and audience participation from all the major networks, powered by our social media platform <a href="http://climb.social">Climb.social</a>.</p>
         </div>
     </div>
     <div class="grid">
