added strategic ux service page

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -124,11 +124,11 @@ banner_image: audience-research.png
         </div>
         <div class="grid-item 1/1 lg-2/3">
             <h2>How we can help</h2>
-            <p>100 Shapes is a UX &amp; design studio based in London. We specialise in working with broadcast media organisations. Bespoke interactive displays for broadcast studios are one the services we provide for program makers who want to present information quickly and easily to audiences at home. Find out more about our other broadcast service design services:</p>
-            <ul>
-                <li><a href="#">Interactive video experiences</a></li>
-                <li><a href="#">Strategic UX Consultancy</a></li>
-                <li><a href="#">Audience Research</a></li>
+            <p>100 Shapes is a UX &amp; design studio based in London. We specialise in working with broadcast media organisations. Find out more about our other broadcast service design services:</p>
+            <ul class="list-bare">
+                <li><a href ui-sref="main.services.item({ slug:'interactive-video-experiences'})">Interactive video experiences</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'interactive-display-screens'})">Interactive display screens</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'strategic-ux-consultancy'})">Strategic UX Consultancy</a></li>
             </ul>
         </div>
     </div>
@@ -153,171 +153,6 @@ banner_image: audience-research.png
             <p>The study examined the potential opportunities to fit into the lives of the audience members by understanding how well they were served for certain types of information such as news, travel, weather and entertainment.</p>
 
             <p>By understanding where participants were under-served and comparing that to what was important we were able to identify the biggest opportunities for London Live and inform the design direction.</p>
-        </div>
-    </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h2>How it works</h2>
-            </div>
-        </div>
-        <div class="grid mb">
-            <div class="grid-item 1/1 lg-1/12">
-            </div>
-            <div class="grid-item 1/1 lg-1/12">
-                <img src="full-screen-web-applications.svg"/>
-            </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Full screen web application</h3>
-                <p>From slideshows to interactive maps, video walls to weather reports. Easily create rich multimedia presentations at a moment’s notice.</p>
-            </div>
-        </div>
-        <div class="grid mb">
-            <div class="grid-item 1/1 lg-1/12">
-            </div>
-            <div class="grid-item 1/1 lg-1/12">
-                <img src="multi-screen.svg"/>
-            </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Multiscreen arrangements</h3>
-                <p>Easily add or remove text, images, video, rich multimedia, social media and data to tell deliver your message clearly.</p>
-            </div>
-        </div>
-        <div class="grid mb">
-            <div class="grid-item 1/1 lg-1/12">
-            </div>
-            <div class="grid-item 1/1 lg-1/12">
-                <img src="stress-free.svg"/>
-            </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>A stress-free interface</h3>
-                <p>Call up immersive graphics and real time data on the fly, controlling the flow of information during a live broadcast.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="wrapper">
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 lg-2/3">
-            <h2>How we can help</h2>
-            <p>100 Shapes is a UX &amp; design studio based in London. We specialise in working with broadcast media organisations. Bespoke interactive displays for broadcast studios are one the services we provide for program makers who want to present information quickly and easily to audiences at home. Find out more about our other broadcast service design services:</p>
-            <ul>
-                <li><a href="#">Interactive video experiences</a></li>
-                <li><a href="#">Strategic UX Consultancy</a></li>
-                <li><a href="#">Audience Research</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="wrapper wrapper-full-bleed">
-    <img src="case-study-london-live.png">
-    <div class="tc">
-        <span>Case Study</span>
-        <h2 class="mt0">London Live</h2>
-    </div>
-</div>
-<div class="wrapper">
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 lg-2/3">
-            <h2>An interactive display screen for live broadcasts</h2>
-            <p>With more than 6 hours of daily live news and entertainments programming, interactive screens have transformed the way London Live’s presenters communicate with their audiences. 100 Shapes devised and designed a suite of interactive big screen applications for the London Live presenters to clearly communicate news, travel and weather content at a moment’s notice.</p>
-        </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-map.png">
-        </div>
-        <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-boris.png">
-        </div>
-        <div class="grid-item 1/1 lg-1/3">
-            <img src="london-live-ftse.png">
-        </div>
-    </div>
-    <div class="grid mb+">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 lg-2/3">
-            <h3>Cleverly intergrated</h3>
-            <p>The real-time data is powered by the same systems as London Live’s website, reducing the need for unnecessary editorial amends and ensuring a consistent message across platforms.</p>
-            <h3>Intuitive admin</h3>
-            <p>Required to display real-time data instantly, the interactive display showcases live news, weather and travel data with minimal set-up. London Live’s presenters use an intuitive admin to quickly set up and create highly visual presentations.</p>
-        </div>
-    </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 lg-2/3">
-            <h2>London Live’s formats included:</h2>
-        </div>
-    </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="news-headlines.svg">
-            <h4>News headlines</h4>
-            <p>As text, image, video, rich multimedia, graphics and data.</p>
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="social-media.svg">
-            <h4>Social Media</h4>
-            <p>Real-time social media, social analytics and audience participation from all the major networks.</p>
-        </div>
-    </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="traffic-updates.svg">
-            <h4>Traffic Updates</h4>
-            <p>Dynamic updates on road closures, road works and disruptions.</p>
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="public-transport.svg">
-            <h4>Public transport updates</h4>
-            <p>Live tube, rail and bus updates.</p>
-        </div>
-    </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="weather-forecast.svg">
-            <h4>Weather forecasts</h4>
-            <p>Up to 5 day forecasts, supported by graphics, maps and artwork.</p>
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="sport.svg">
-            <h4>Sport</h4>
-            <p>Team and player profiles, match statistics, gallery updates.</p>
-        </div>
-    </div>
-    <div class="grid mb">
-        <div class="grid-item 1/1 lg-1/12">
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="finance.svg">
-            <h4>Finance</h4>
-            <p>Stock market trends and news.</p>
-        </div>
-        <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="maps.svg">
-            <h4>Map</h4>
-            <p>Location-specific news and listings information that can be explored live on air with the ability to zoom in and out.</p>
         </div>
     </div>
 </div>
