--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -161,10 +161,10 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-2/3">
             <h2>How we can help</h2>
             <p>100 Shapes is a UX &amp; design studio based in London. We specialise in working with broadcast media organisations. Bespoke interactive displays for broadcast studios are one the services we provide for program makers who want to present information quickly and easily to audiences at home. Find out more about our other broadcast service design services:</p>
-            <ul>
-                <li><a href="#">Interactive video experiences</a></li>
-                <li><a href="#">Strategic UX Consultancy</a></li>
-                <li><a href="#">Audience Research</a></li>
+            <ul class="list-bare">
+                <li><a href ui-sref="main.services.item({ slug:'interactive-video-experiences'})">Interactive video experiences</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'audience-research'})">Audience Research</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'strategic-ux-consultancy'})">Strategic UX Consultancy</a></li>
             </ul>
         </div>
     </div>
