--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -146,10 +146,10 @@ banner_image: interactive-video-experiences.png
         <div class="grid-item 1/1 lg-2/3">
             <h2>How we can help</h2>
             <p>As specialist in UX and design for broadcast and media organisations, our teams have created a range of interactive video experiences that are pushing the boundaries of traditional linear storytelling. From concept to front-end delivery, we provide services at all points in a project’s design process.</p>
-            <ul>
-                <li><a href="#">Interactive display screens</a></li>
-                <li><a href="#">Strategic UX Consultancy</a></li>
-                <li><a href="#">Audience Research</a></li>
+            <ul class="list-bare">
+                <li><a href ui-sref="main.services.item({ slug:'interactive-display-screens'})">Interactive display screen</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'audience-research'})">Audience Research</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'strategic-ux-consultancy'})">Strategic UX Consultancy</a></li>
             </ul>
         </div>
     </div>
