--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -1,24 +1,191 @@
 ---
-title: Strategic UX Consultancy
-title_long: Strategic User Experience (UX) Consultancy <br /> <i class='ffs'>for</i> broadcasters
-lead: Something really interesting
+title: Strategic UX consultancy
+title_long: Strategic UX consultancy for media organisations
+lead: Shape and communicate your vision to your customers.
 description: >
-    Some really long description that breaks
-    over multiple lines
-
+    UX strategies are key to media organisations who want to bring their vision to every customer touchpoint. We can help you implement clear long-term plans, connect your design strategy to business results, define the concept for your digital product and identify user requirements.
 intro: >
-    Strategic UX Consultancy intro.
+    UX strategies are key to media organisations who want to bring their vision to every customer touchpoint. We can help you implement clear long-term plans, connect your design strategy to business results, define the concept for your digital product and identify user requirements.
 
-square_image: ./social.jpg
-banner_image: ./banner.jpg
+square_image: strategic-ux-consultancy-square.png
+banner_image: strategic-ux-consultancy.png
 ---
 
 
 <div class="wrapper">
     <div class="grid">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
         <div class="grid-item 1/1 lg-2/3 mb">
-            <h2>Stuff &amp; Things</h2>
-            <p>True dat.</p>
+            <h2>What is a User Experience Strategy?</h2>
+            <p>UX strategy is about the big picture. It’s a long-term business strategy to improve, measure and manage the user experience across multiple channels and devices.</p>
+
+            <p>It provides your team with a clear understanding of how your business needs to serve its customers and how to harness technology to do so.</p>
+
+            <p>Approached at the organisational level, it will help you prioritise objectives, develop a clear roadmap of improvement for user experience and help senior stakeholders understand the case for investment.</p>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12 mb">
+            <hr class="mt+">
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-2/3 mb">
+            <h2 class='mt0'>The benefits of having a user experience strategy</h2>
+            <p>Working alongside UX team members, programme managers, business analysts, technical staff and visual designers, our UX Strategists offer a broad range of services that can help your organisation:</p>
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/3">
+            <p>
+                <img src="tick.svg">
+                <span>identify user requirements</span>
+                <br>
+                <img src="tick.svg">
+                <span>Summarise your business model and current operating plan</span>
+                <br>
+                <img src="tick.svg">
+                <span>Connect design strategy to business results</span>
+                <br>
+                <img src="tick.svg">
+                <span>Establish a vision for the digital product</span>
+                <br>
+                <img src="tick.svg">
+                <span>Set design goals</span>
+                <br>
+                <img src="tick.svg">
+                <span>Study users to guide the design</span>
+                <br>
+                <img src="tick.svg">
+                <span>Shape and prioritise feature sets</span>
+            </p>
+        </div>
+        <div class="grid-item 1/1 lg-1/3">
+            <p>
+                <img src="tick.svg">
+                <span>Craft experiences that translate business and user needs into highly engaging experiences</span>
+                <br>
+                <img src="tick.svg">
+                <span>Produce a UX roadmap</span>
+                <br>
+                <img src="tick.svg">
+                <span>Ensure that UX teams align their direction with their organisation’s business plan</span>
+                <br>
+                <img src="tick.svg">
+                <span>Facilitate strategic and user-centric decision making</span>
+                <br>
+                <img src="tick.svg">
+                <span>Reach across the organisation to build relationships that help your UX design effort succeed</span>
+            </p>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12 mb">
+            <hr class="mt+">
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <h2>Creating a clear UX strategy</h2>
+            <p>Defining your user experience strategy has many parallels to how you define your business strategy. It comprises of the following steps:</p>
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12">
+            <img src="presentation.svg"/>
+        </div>
+        <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <h3>1. A clear view of where you are</h3>
+            <p>In order to take your product or service forward, you need to know where you are to begin with. We’ll kick things off by gathering information about your business and users.</p>
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12">
+            <img src="multi-screen.svg"/>
+        </div>
+        <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <h3>2. Establishing your vision</h3>
+            <p>Next it’s time to work out where you want to be. Armed with the information we’ve gathered, we brainstorm and prioritise strategies that have a measurable impact on your business.</p>
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12">
+            <img src="change-the-story.svg"/>
+        </div>
+        <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <h3>3. Get the job done</h3>
+            <p>With a clear road map of who does what and when, it’s time to roll up our sleeves and implement your vision. Our strategists and designers work with you to develop your goals into a tangible product (or service) to deliver the business outcomes you are targeting.</p>
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12">
+            <img src="change-the-story.svg"/>
+        </div>
+        <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <h3>4. Time to respond</h3>
+            <p>Once your project is out in the world, we’ll gather metrics and useful feedback to determine its success. With these insights we’ll make any necessary improvements before tackling the next objective.</p>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-1/12 mb">
+            <hr class="mt+">
+        </div>
+    </div>
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-2/3">
+            <h2>How we can help</h2>
+            <p>100 Shapes is a UX &amp; design studio based in London. We specialise in working with broadcast media organisations. Find out more about our other broadcast service design services:</p>
+            <ul class="list-bare">
+                <li><a href ui-sref="main.services.item({ slug:'interactive-display-screens'})">Interactive display screen</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'audience-research'})">Audience Research</a></li>
+                <li><a href ui-sref="main.services.item({ slug:'interactive-video-experiences'})">Interactive video experiences</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="wrapper wrapper-full-bleed">
+    <img src="case-study-london-live.png">
+    <div class="tc">
+        <span>Case Study</span>
+        <h2 class="mt0">London Live</h2>
+    </div>
+</div>
+<div class="wrapper">
+    <div class="grid mb">
+        <div class="grid-item 1/1 lg-1/12">
+        </div>
+        <div class="grid-item 1/1 lg-2/3">
+            <h2>A digital platfrom for London</h2>
+            <p>London Live is a British television channel, launched at 6:30pm on 31st March 2014. Combining London news and entertainment, it is broadcast on Freeview channel 8, satellite, cable and online.</p>
+
+            <p>When 100 Shapes were commissioned to design the London Live website we assembled a team of user researchers, user experience designers and information architects to deliver the project with a user-centered approach. Up-front in order to identify genuine user needs, we ran an in-depth audience research study with 10 participants based on a target demographic.</p>
+
+            <p>The study examined the potential opportunities to fit into the lives of the audience members by understanding how well they were served for certain types of information such as news, travel, weather and entertainment.</p>
+
+            <p>By understanding where participants were under-served and comparing that to what was important we were able to identify the biggest opportunities for London Live and inform the design direction.</p>
         </div>
     </div>
 </div>
