added more square imagery

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -7,7 +7,7 @@ description: >
 intro: >
     Audience research provides the foundation for creating products that match your target audience. It allows you to explore the goals and behaviours of existing or potential users and gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
 
-square_image: audience-research.png
+square_image: audience-research-square.png
 banner_image: audience-research.png
 ---
 
