Made Page more producty

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -3,9 +3,9 @@ title: Audience research
 title_long: Audience research for media organisations
 lead: Understand what makes your audience tick.
 description: >
-    Audience research provides the foundation for creating products that match your target audience. It allows you to explore the goals and behaviours of existing or potential users and gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
+    Audience research by 100 Shapes provides the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
 intro: >
-    Audience research provides the foundation for creating products that match your target audience. It allows you to explore the goals and behaviours of existing or potential users and gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
+    Our Audience research methods provide the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
 
 square_image: audience-research-square.png
 banner_image: audience-research.png
