tweaked lead copy

--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -1,7 +1,7 @@
 ---
 title: Interactive video experiences
 title_long: Interactive video experiences for Broadcast
-lead: Tell a story your audience will remember
+lead: Tell stories your audience will remember and share
 description: >
     Whether you want your viewers to control the narrative, explore additional video clips or buy what they see, turn your audience from passive viewers into active participants.
 intro: >
