Gave the lead a point

--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -1,7 +1,7 @@
 ---
 title: Strategic UX consultancy
 title_long: Strategic UX consultancy for media organisations
-lead: Shape and communicate your vision to your customers.
+lead: Hire us to shape and communicate your vision to your audiences.
 description: >
     UX strategies are key to media organisations who want to bring their vision to every customer touchpoint. We can help you implement clear long-term plans, connect your design strategy to business results, define the concept for your digital product and identify user requirements.
 intro: >
