--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -1,6 +1,6 @@
 ---
 title: Interactive video experiences
-title_long: Interactive video experiences for Broadcast
+title_long: Online interactive video experiences for broadcasters
 lead: Tell stories your audience will remember and share
 description: >
     Whether you want your viewers to control the narrative, explore additional video clips or buy what they see, turn your audience from passive viewers into active participants.
