added new square image

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -7,7 +7,7 @@ description: >
 intro: >
     Whether you’re broadcasting an in-depth news feature or today’s weather forecast, an interactive display screen is a powerful tool for presenters to communicate your message to audiences on television and online.
 
-square_image: interactive-display-screens-square.svg
+square_image: interactive-display-screens-square.png
 banner_image: interactive-display-screens.png
 ---
 
