Tweaked first heading

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -17,7 +17,7 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-2/3 mb">
-            <h2>Interactive display screens that give you full control</h2>
+            <h2>Interactive display screens that give your presenters full control</h2>
             <p>Have your presenters show dynamic multimedia content on interactive display screens as part of an in-depth news feature, travel update or today’s weather forecast. Giant touch-enabled displays are powerful tools to communicate real-time content to online and TV audiences in an appealing way that cleverly integrates your brand.</p>
         </div>
     </div>
